<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_title_label"/>
    <EditText
        android:id="@+id/check_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/check_title_hint"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_details_label"/>
    <EditText
        android:id="@+id/check_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/check_details_hint"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_place_label"/>
    <EditText
        android:id="@+id/check_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/check_place_hint"/>
    <Button
        android:id="@+id/check_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>